--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-bcrypt==4.0.1
-blinker==1.6.2
-bson==0.5.10
+bcrypt==4.0.1  
+blinker==1.6.2 
+bson==0.5.10   
 cachelib==0.9.0
-click==8.1.3
+click==8.1.3   
 colorama==0.4.6
 dnspython==2.3.0
 Flask==2.3.2
 Flask-Caching==2.0.2
+Flask-Cors==3.0.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
