--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cachelib==0.9.0
 click==8.1.3
 colorama==0.4.6
 dnspython==2.3.0
-Flask==2.3.2
+Flask
 Flask-Caching==2.0.2
 Flask-Cors==3.0.10
 gunicorn==20.1.0
