--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Flask-Cors==3.0.10
 gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.2
+MarkupSafe
 numpy==1.24.3
 opencv-python==4.7.0.72
 Pillow==9.5.0
