--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe
-numpy==1.24.3
-opencv-python==4.7.0.72
-Pillow==9.5.0
-PyJWT==2.7.0
-pymongo==4.3.3
-python-dotenv==1.0.0
-six==1.16.0
-Werkzeug==2.3.4
+numpy
+opencv-python
+Pillow
+PyJWT
+pymongo
+python-dotenv
+six
+Werkzeug
