--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-bcrypt==4.0.1
-blinker==1.6.2
-cachelib==0.9.0
-click==8.1.3
-colorama==0.4.6
-dnspython==2.3.0
+bcrypt
+blinker
+cachelib
+click
+colorama
+dnspython
 Flask
-Flask-Caching==2.0.2
-Flask-Cors==3.0.10
-gunicorn==20.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
+Flask-Caching
+Flask-Cors
+gunicorn
+itsdangerous
+Jinja2
 MarkupSafe
 numpy
 opencv-python
