--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-MONGODB_USERNAME=joesmith
 MONGODB_PASSWORD=joesmithpassword
-MONGODB_CLUSTER=clusterA.abcdefg.mongodb.net
-MONGODB_NAME=Boe
+MONGODB_NAME=BoeApp
